5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1834_1277.log
== TEST (2019-07-01 20:05:30) 
-- CODE:
from numpy import*
a= int(input(""))
b int(input((""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15]
					   [11,7,0,11,8,3,13]
					  	[6,12,11,0,10,2,1]
					  	[15,4,8,10,0,5,13]
					  	[1,15,13,1,13,14,0]])
print(matriarca)
-- ERROR:
File "XXXX", line 3
    b int(input((""))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:07:02) 
-- CODE:
from numpy import*
a= int(input(""))
b int(input((""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15]
					   [11,7,0,11,8,3,13]
					  	[6,12,11,0,10,2,1]
					  	[15,4,8,10,0,5,13]
					  	[1,15,13,1,13,14,0]])
print(matriarca)
-- ERROR:
File "XXXX", line 3
    b int(input((""))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:07:09) 
-- CODE:
from numpy import*
a= int(input(""))
b int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15]
					   [11,7,0,11,8,3,13]
					  	[6,12,11,0,10,2,1]
					  	[15,4,8,10,0,5,13]
					  	[1,15,13,1,13,14,0]])
print(matriarca)
-- ERROR:
File "XXXX", line 3
    b int(input(""))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:07:15) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15]
					   [11,7,0,11,8,3,13]
					  	[6,12,11,0,10,2,1]
					  	[15,4,8,10,0,5,13]
					  	[1,15,13,1,13,14,0]])
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:07:46) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[1,15,13,1,13,14,0]])
print(matriarca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:10:23) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:10:37) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- EXECUTION TIME:
1.00849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 13, in <module>
    x= matriarca[i,j]
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:10:42) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- EXECUTION TIME:
0.995286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 13, in <module>
    x= matriarca[i,j]
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:16:28) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:16:51) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:17:00) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:18:35) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,14],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- EXECUTION TIME:
0.870225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 13, in <module>
    x= matriarca[i,j]
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:18:50) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,5,0,14],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- EXECUTION TIME:
1.01998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1277/main.py", line 13, in <module>
    x= matriarca[i,j]
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:21:09) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])

i=(a//111)-1
j=(b//111)-1
x= matriarca[i,j]
print(x)
-- EXECUTION TIME:
1.08291
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
